--- a/tasks-api/package.json
+++ b/tasks-api/package.json
@@ -19,6 +19,7 @@
     "lint:autofix": "eslint . --ext .js,.ts --fix"
   },
   "dependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
@@ -29,6 +30,7 @@
     "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.6.3",
     "@types/yamljs": "^0.2.31",
+    "amqplib": "^0.8.0",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
